--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,18 @@
+@import 'variables';
+
+@font-face {
+  font-display: swap;
+  font-family: Acma;
+  font-style: normal;
+  font-weight: 300;
+  src: url('/assets/fonts/PPAcma-Light.woff2') format('woff2');
+}
+@font-face {
+  font-family: Neue Montreal;
+  font-weight: 400;
+  src: url('/assets/fonts/PPNeueMontreal-Regular.woff2') format('woff2');
+}
+
 *,
 *::before,
 *::after {
@@ -7,18 +22,8 @@
 }
 
 body {
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Open Sans',
-    'Helvetica Neue',
-    sans-serif;
-  background-color: #333;
-  color: #fff;
+  font-family: Neue Montreal;
+  font-size: 18px;
+  letter-spacing: normal;
+  line-height: 1.2;
 }
