--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -7,6 +7,12 @@
     width: 100%;
   }
 
+  &--image {
+    height: 100vh;
+    object-fit: cover;
+    width: 100%;
+  }
+
   &--logos {
     bottom: 2rem;
     left: 50%;
